--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
-  "name": "01",
+  "name": "proyecto-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "productManager.js",
+  "description": "Proyecto Backend CoderHouse",
+  "main": "./src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "test": "npx mocha ./test/**/*.js --exit"
   },
+  "type": "module",
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Gabriel Arriola",
+  "license": "ISC",
+  "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "bcrypt": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "colors": "^1.4.0",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.3.3",
+    "mongoose-paginate-v2": "^1.8.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.5",
+    "supertest-session": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
+    "supertest": "^7.0.0"
+  }
 }
