--- a/src/.env.dev
+++ b/src/.env.dev
@@ -1,10 +1,10 @@
 PORT = 8000
-MONGO_URL = mongodb+srv://garriola2024projects:rPaZEyDVqTeFFtRk@cluster0.8fidt.mongodb.net/ecommerce
+MONGO_URL = mongodb+srv://url
 DB_NAME = ecommerce
 SECRET = CoderCoder123
-CLIENT_ID_GITHUB = Ov23liH6uzYv6vpXqvAn
-CLAVE_CLIENT_SECRET = 814eca79865ddc4d674ea51a685a1fc6ddffe1dc
+CLIENT_ID_GITHUB = client_id#
+CLAVE_CLIENT_SECRET = client_secret_id#
 CALLBACK_URL = http://localhost:8000/api/sessions/callbackGithub
-GMAIL_EMAIL: garriola2024projects@gmail.com
-GMAIL_PASS: N3wPr0j3ct5M@1L
+GMAIL_EMAIL: correo@mail
+GMAIL_PASS: passw123
 ENTORNO=test
